# ev_dynamics_simulation

./: .gitignore  ARCHITECT_TASK.md  BUILD_GUIDE.md  BUILD_GUIDE_INSIDERS.md  CHASSIS_COMPLETION_REPORT.md  CMakeLists.txt.backup  CMakeLists_simple.txt  COORDINATION_LOG.md  DAILY_PROGRESS.md  DELIVERY_CHECKLIST.md  DEMO_CHECKLIST.md  DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DEPENDENCY_CHECK_20260308_2312.md  DEPENDENCY_CHECK_REPORT.md  Doxyfile  IMPLEMENTATION_PLAN_A.md  INSTALL_CPP_WORKLOAD.md  LICENSE  LOOP_2_COMPLETION.md  LOOP_4_COMPLETION.md  LOOP_4_TESTING.md  LOOP_5_BUILD.md  LOOP_5_COMPLETION.md  MILESTONE_REPORT_20260308.md  MULTI_AGENT_PLAN.md  Makefile  PERFORMANCE_REPORT.md  PHASE1_PROGRESS_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE2_START_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE4_START_REPORT.md  PHASE5_QUALITY_ASSESSMENT.md  PREPARE_GITHUB.md  PROACTIVE_LOOP.md  PROACTIVE_STATUS_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_CONFIG.yaml  PROJECT_PROGRESS.md  (+20 more)
.github/workflows/: ci.yml
config/: monitoring.yaml  production.yaml  production_security.yaml  security.yaml  simulation_config.yaml
docs/: AGENT_DEVELOPMENT_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  CHASSIS_MODULE.md  DATA_STRUCTURES.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  DEV_ENVIRONMENT_SETUP.md  DOCUMENTATION_REPORT.md  EXCEPTION_HANDLING_GUIDE.md  FAQ.md  MODULE_INTERFACE_SPEC.md  PHASE2_AGENT_TASKS.md  PRODUCTION_DEPLOYMENT.md  PROJECT_OVERVIEW.md  SECURITY_HARDENING_GUIDE.md  TECHNICAL_DECISIONS.md  TIRE_MODULE_COMPLETION_REPORT.md  TROUBLESHOOTING.md  USER_GUIDE.md  WINDOWS10_CHANGELOG.md  WINDOWS10_INSTALL_SUMMARY.md  WINDOWS10_USER_GUIDE.md
examples/: USAGE_EXAMPLES.md
include/: .gitkeep  exception_handler.h  vehicle_exceptions.h
monitoring/: GRAFANA_SETUP_GUIDE.md  grafana_dashboard_system.json  grafana_dashboard_vehicle.json  prometheus_rules.yml
scripts/: check_environment.bat  configure.sh  deploy.sh  health_check.sh  install.bat  install.sh  install_dependencies.ps1  security_check.sh  start.sh  stop.sh
src/: CMakeLists.txt  pybind11_template.cpp
src/chassis/: CMakeLists.txt  braking.cpp  braking.h  chassis_binding.cpp  steering.cpp  steering.h  suspension.cpp  suspension.h
src/dynamics/: CMakeLists.txt  dynamics_binding.cpp  rk4_integrator.cpp  rk4_integrator.h  state_space.cpp  state_space.h  vehicle_dynamics.cpp  vehicle_dynamics.h
src/powertrain/: CMakeLists.txt  CMakeLists_fixed.txt  CMakeLists_updated.txt  POWERTRAIN_BUILD.md  battery.cpp  battery.h  build.bat  build.sh  pmsm_motor.cpp  pmsm_motor.h  power_distribution.cpp  power_distribution.h  powertrain_binding.cpp  transmission.cpp  transmission.h
src/scheduler/: CMakeLists.txt  README.md  ipc_manager.cpp  ipc_manager.h  realtime_scheduler.cpp  realtime_scheduler.h  scheduler_binding.cpp
src/tire/: CMakeLists.txt  compile_tire.bat  pacejka_model.cpp  pacejka_model.h  tire_binding.cpp  tire_dynamics.cpp  tire_dynamics.h
tests/: CMakeLists.txt  QUICKSTART.md  README.md  run_all_tests.py  test_message_queue_perf.py  test_realtime_prerequisite.py  test_report_template.md  test_shared_memory_perf.py
tests/chassis/: CMakeLists.txt  test_chassis.cpp  test_chassis_extended.cpp
tests/dynamics/: CMakeLists.txt  test_integration.cpp
tests/powertrain/: test_powertrain.cpp  test_powertrain_extended.cpp
tests/python/: test_all_modules.py
tests/scheduler/: CMakeLists.txt  code_statistics.py  compile_test.bat  test_scheduler.cpp  test_scheduler_extended.cpp
tests/tire/: CMakeLists.txt  test_tire.cpp  test_tire_extended.cpp
